google fonts comment added

--- a/templates/commodity.html
+++ b/templates/commodity.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Crop prediction</title>
-  <!-- Compiled and minified CSS -->
+    <!-- Compiled for minified CSS and google fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
