--- a/templates/commodity.html
+++ b/templates/commodity.html
@@ -9,7 +9,11 @@
     <!-- Compiled and minified JavaScript -->
      <style>
         div.main {
-            padding: 5px 50px 75px 50px;
+          padding-top: 5px;
+          padding-right: 50px;
+          padding-bottom: 75px;
+          padding-left: 50px;
+
         }
     </style>
         
