--- a/templates/commodity.html
+++ b/templates/commodity.html
@@ -13,7 +13,6 @@
           padding-right: 50px;
           padding-bottom: 75px;
           padding-left: 50px;
-
         }
     </style>
         
@@ -29,6 +28,7 @@
         </div>
         <div class="card-stacked">
           <div class="card-content">
+              {% comment %} Table creation for retrieve the data from the api's in index   {% endcomment %}
             <table>
               <tr>
                 <td>Current Price</td>
