added a comment on graph

--- a/templates/commodity.html
+++ b/templates/commodity.html
@@ -122,7 +122,9 @@
                 stepSize : 200
             }
         }]
-    }}});</script>
+    }}});
+    {% comment %} Displaying the graph for Previous year price {% endcomment %}
+  </script>
   </div>
   <div class="chartjs-wrapper col s7 offset-s1">
     <canvas id="chartjs-1" class="chartjs" width="undefined" height="undefined" style=" width:800px !important;
