added comments on rendering

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
 " height="70px" width="70px">Apna Anaaj</h3>
     -->
 
-    <div class="row">
+    <div class="row">``
     <div class="card-panel col s9">
       <h4 class=" #e0f7fa cyan lighten-5">Top Gainers(Current trends)</h4>
       <table class="striped">
@@ -113,7 +113,7 @@
                 </td>
             </tr>
           </table>
-
+            {% comment %} Data gets rendered on page load {% endcomment %}
             <script>
                     var i = 0
                     setInterval(function(){
