--- a/templates/index.html
+++ b/templates/index.html
@@ -134,6 +134,7 @@
 
     </div>
   </div>
+    {% comment %} Displaying the crop details {% endcomment %}
   <h5>Explore by commodity</h5>
   <div class="row">
     <div class="col s3">
